--- a/index.html
+++ b/index.html
@@ -328,6 +328,17 @@ $(document).ready(function () {
 </div>
 <div id="videos" class="section level2">
 <h2>Videos</h2>
+<p><a href="https://youtu.be/ODPWOfPHVsk">Day 1 - Full</a></p>
+</div>
+<div id="section" class="section level1 footer">
+<h1></h1>
+<hr>
+<style type="text/css">
+.footer p {
+    font-size: smaller
+}
+</style>
+<p>Last Updated: <em>2020-08-17 19:22:57</em></p>
 </div>
 
 
