--- a/syllabus.html
+++ b/syllabus.html
@@ -379,13 +379,13 @@ $(document).ready(function () {
 <li>Reading Data</li>
 <li>Saving Data</li>
 </ul></li>
-<li>Data Manipulations
+<li><a href="DataWrangling.html">Data Manipulations</a>
 <ul>
 <li>Reshaping Data, Wide/Long, Nesting, Etc.</li>
 <li>Subsetting/Filtering</li>
 <li>Merging/Joining</li>
 </ul></li>
-<li>Summarization</li>
+<li><a href="DataWrangling.html">Summarization</a></li>
 <li>Graphics
 <ul>
 <li>Base Graphics</li>
