--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@ $(document).ready(function () {
 <li><a href="Packages.html">Packages</a></li>
 <li><a href="Tidyverse.html">Tidyverse</a></li>
 <li><a href="GettingData.html">Getting Data</a></li>
+<li><a href="DataWrangling.html">Data Wrangling</a></li>
 </ul>
 </div>
 <div id="data" class="section level2">
@@ -338,7 +339,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-17 19:22:57</em></p>
+<p>Last Updated: <em>2020-08-18 08:00:54</em></p>
 </div>
 
 
