--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@ $(document).ready(function () {
 <li><a href="Syntax.html">Syntax &amp; Data Structures</a></li>
 <li><a href="Packages.html">Packages</a></li>
 <li><a href="Tidyverse.html">Tidyverse</a></li>
-<li><a href="GettingData.html">Getting Data</a></li>
-<li><a href="DataWrangling.html">Data Wrangling</a></li>
+<li><a href="GettingData.html">Getting Data</a><a href="GettingData.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="DataWrangling.html">Data Wrangling</a> <a href="DataWrangling.pdf"><img src="images/pdf.png" /></a></li>
 </ul>
 </div>
 <div id="data" class="section level2">
@@ -339,7 +339,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-18 08:00:54</em></p>
+<p>Last Updated: <em>2020-08-18 08:39:28</em></p>
 </div>
 
 
