--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@ $(document).ready(function () {
 <div id="slides" class="section level2">
 <h2>Slides</h2>
 <ul>
-<li><a href="Introductions.html">Introductions</a></li>
-<li><a href="Principles.html">Principles</a></li>
-<li><a href="Resources.html">Resources</a></li>
-<li><a href="Syntax.html">Syntax &amp; Data Structures</a></li>
-<li><a href="Packages.html">Packages</a></li>
-<li><a href="Tidyverse.html">Tidyverse</a></li>
-<li><a href="GettingData.html">Getting Data</a><a href="GettingData.pdf"><img src="images/pdf.png" /></a></li>
-<li><a href="DataWrangling.html">Data Wrangling</a> <a href="DataWrangling.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Introductions.html">Introductions</a> <a href="pdf/Introductions.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Principles.html">Principles</a> <a href="pdf/Principles.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Resources.html">Resources</a> <a href="pdf/Resources.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Syntax.html">Syntax &amp; Data Structures</a> <a href="pdf/Syntax.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Packages.html">Packages</a> <a href="pdf/Packages.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Tidyverse.html">Tidyverse</a> <a href="pdf/Tidyverse.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="GettingData.html">Getting Data</a><a href="pdf/GettingData.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="DataWrangling.html">Data Wrangling</a> <a href="pdf/DataWrangling.pdf"><img src="images/pdf.png" /></a></li>
 </ul>
 </div>
 <div id="data" class="section level2">
@@ -339,7 +339,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-18 08:39:28</em></p>
+<p>Last Updated: <em>2020-08-18 08:46:29</em></p>
 </div>
 
 
