--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@ $(document).ready(function () {
 <li><a href="Tidyverse.html">Tidyverse</a> <a href="pdf/Tidyverse.pdf"><img src="images/pdf.png" /></a></li>
 <li><a href="GettingData.html">Getting Data</a><a href="pdf/GettingData.pdf"><img src="images/pdf.png" /></a></li>
 <li><a href="DataWrangling.html">Data Wrangling</a> <a href="pdf/DataWrangling.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Graphics.html">Graphics</a> <a href="pdf/DataWrangling.pdf"><img src="images/pdf.png" /></a></li>
 </ul>
 </div>
 <div id="data" class="section level2">
@@ -318,18 +319,19 @@ $(document).ready(function () {
 <li><a href="https://data.humdata.org/dataset/ebola-cases-2014">Source</a> - The Humanitarian Data Exchange<br />
 </li>
 <li><a href="https://github.com/halpo/R_Bootcamp_2020/raw/master/data/ebola-cases-and-deaths-who-gar-sitrep.xlsx">Data</a></li>
-<li><a href="https://github.com/halpo/R_Bootcamp_2020/tree/master/reading_ebola_data.R">Script - version 1</a></li>
+<li><a href="https://github.com/halpo/R_Bootcamp_2020/tree/master/reading_ebola_data.R">Script</a></li>
 </ul></li>
-<li>Bourdeaux Wine Data
+<li>Bordeaux Wine Data
 <ul>
 <li><a href="https://link.springer.com/book/10.1007/978-0-387-09608-7">Source</a> - Sheather, Simon. <em>A modern approach to regression with R.</em> Springer Science &amp; Business Media, 2009.</li>
 <li><a href="https://github.com/halpo/R_Bootcamp_2020/raw/master/data/Bordeaux.csv">Data</a></li>
+<li><a href="https://github.com/halpo/R_Bootcamp_2020/tree/master/read_ing_ebola_data_bordeaux.R">Script</a></li>
 </ul></li>
 </ul>
 </div>
 <div id="videos" class="section level2">
 <h2>Videos</h2>
-<p><a href="https://youtu.be/ODPWOfPHVsk">Day 1 - Full</a></p>
+<p><a href="https://youtu.be/ODPWOfPHVsk">Day 1 - Full</a> <a href="https://youtu.be/D0geSa7Y1kc">Day 2 - Full</a></p>
 </div>
 <div id="section" class="section level1 footer">
 <h1></h1>
@@ -339,7 +341,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-18 08:46:29</em></p>
+<p>Last Updated: <em>2020-08-18 14:36:53</em></p>
 </div>
 
 
