--- a/GettingData.html
+++ b/GettingData.html
@@ -214,7 +214,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Find a function that reads in Microsoft Excel &lsquo;xlsx&rsquo; files. Refer back to the <a href='Resources.html' title=''>Resources slides</a> if you need.</p>
 
-<div id="timer1" onclick="startTimer()" class="timer">
+<div id="timer1" class="timer" onclick="startTimer()">
 <p>2:00</p></div>
 
 </article></slide><slide class=""><hgroup><h2>Possible Answers</h2></hgroup><article  id="possible-answers">
