--- a/syllabus.html
+++ b/syllabus.html
@@ -386,7 +386,7 @@ $(document).ready(function () {
 <li>Merging/Joining</li>
 </ul></li>
 <li><a href="DataWrangling.html">Summarization</a></li>
-<li>Graphics
+<li><a href="Graphics.html">Graphics</a>
 <ul>
 <li>Base Graphics</li>
 <li>Grammar Based, <code>ggplot2</code></li>
