--- a/index.html
+++ b/index.html
@@ -331,7 +331,10 @@ $(document).ready(function () {
 </div>
 <div id="videos" class="section level2">
 <h2>Videos</h2>
-<p><a href="https://youtu.be/ODPWOfPHVsk">Day 1 - Full</a> <a href="https://youtu.be/D0geSa7Y1kc">Day 2 - Full</a></p>
+<ul>
+<li><a href="https://youtu.be/ODPWOfPHVsk">Day 1 - Full</a></li>
+<li><a href="https://youtu.be/D0geSa7Y1kc">Day 2 - Full</a></li>
+</ul>
 </div>
 <div id="section" class="section level1 footer">
 <h1></h1>
@@ -341,7 +344,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-18 14:36:53</em></p>
+<p>Last Updated: <em>2020-08-19 07:57:48</em></p>
 </div>
 
 
