--- a/Graphics.html
+++ b/Graphics.html
@@ -189,7 +189,9 @@ slide:not(.current) .plotly.html-widget{
 
 <slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Plots</h2></hgroup><article  id="plots">
 
-<p><img src="Graphics_files/figure-html/unnamed-chunk-1-1.svg" width="720" /> ## Packages</p>
+<p><img src="Graphics_files/figure-html/unnamed-chunk-1-1.svg" width="720" /></p>
+
+</article></slide><slide class=""><hgroup><h2>Packages</h2></hgroup><article  id="packages">
 
 <h3>Must have</h3>
 
@@ -222,11 +224,11 @@ slide:not(.current) .plotly.html-widget{
 <li>Grammar</li>
 </ol>
 
-</article></slide><slide class=""><hgroup><h2>Base Graphics</h2></hgroup><article  id="base-graphics" class="flexbox vcenter">
+</article></slide><slide class=""><hgroup><h2>Base Graphics</h2></hgroup><article  class="flexbox vcenter" id="base-graphics">
 
 <p>Don’t waste your time.</p>
 
-</article></slide><slide class=""><hgroup><h2>Grid Graphics</h2></hgroup><article  id="grid-graphics" class="flexbox vcenter">
+</article></slide><slide class=""><hgroup><h2>Grid Graphics</h2></hgroup><article  class="flexbox vcenter" id="grid-graphics">
 
 <p>An even bigger waste of time.</p>
 
@@ -413,7 +415,7 @@ ggplot(data= ebola.data %&gt;% select(2:4, 6) %&gt;% distinct()
 
 <p><img src="Graphics_files/figure-html/unnamed-chunk-6-1.png" width="720" /></p>
 
-</article></slide><slide class=""><hgroup><h2>Themes</h2></hgroup><article  id="themes" class="build">
+</article></slide><slide class=""><hgroup><h2>Themes</h2></hgroup><article  class="build" id="themes">
 
 <p>Themes are what control the non-data elements of a visualization</p>
 
@@ -494,7 +496,7 @@ qplot(`Total cases`, `Total deaths`, color = Country, data=plotting.data)</pre>
 </ol></li>
 </ol>
 
-<div warnafter="120" class="timer" onclick="startTimer()" id="timer-plots">
+<div class="timer" onclick="startTimer()" warnafter="120" id="timer-plots">
 <p>10:00</p></div>
 
 </article></slide><slide class=""><hgroup><h2>Solution: Preliminary</h2></hgroup><article  id="solution-preliminary">
