--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ $(document).ready(function () {
 <li><a href="Tidyverse.html">Tidyverse</a> <a href="pdf/Tidyverse.pdf"><img src="images/pdf.png" /></a></li>
 <li><a href="GettingData.html">Getting Data</a><a href="pdf/GettingData.pdf"><img src="images/pdf.png" /></a></li>
 <li><a href="DataWrangling.html">Data Wrangling</a> <a href="pdf/DataWrangling.pdf"><img src="images/pdf.png" /></a></li>
-<li><a href="Graphics.html">Graphics</a> <a href="pdf/DataWrangling.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Graphics.html">Graphics</a> <a href="pdf/Graphics.pdf"><img src="images/pdf.png" /></a></li>
 </ul>
 </div>
 <div id="data" class="section level2">
@@ -344,7 +344,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-19 07:57:48</em></p>
+<p>Last Updated: <em>2020-08-19 08:42:30</em></p>
 </div>
 
 
