--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@ $(document).ready(function () {
 <ul>
 <li><a href="https://youtu.be/ODPWOfPHVsk">Day 1 - Full</a></li>
 <li><a href="https://youtu.be/D0geSa7Y1kc">Day 2 - Full</a></li>
+<li><a href="https://youtu.be/Hv7Fdl9bqGI">Day 3 - Full</a></li>
 </ul>
 </div>
 <div id="section" class="section level1 footer">
@@ -344,7 +345,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-19 08:42:30</em></p>
+<p>Last Updated: <em>2020-08-19 14:52:38</em></p>
 </div>
 
 
