--- a/index.html
+++ b/index.html
@@ -308,7 +308,13 @@ $(document).ready(function () {
 <li><a href="Tidyverse.html">Tidyverse</a> <a href="pdf/Tidyverse.pdf"><img src="images/pdf.png" /></a></li>
 <li><a href="GettingData.html">Getting Data</a><a href="pdf/GettingData.pdf"><img src="images/pdf.png" /></a></li>
 <li><a href="DataWrangling.html">Data Wrangling</a> <a href="pdf/DataWrangling.pdf"><img src="images/pdf.png" /></a></li>
-<li><a href="Graphics.html">Graphics</a> <a href="pdf/Graphics.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Graphics.html">Graphics</a> <a href="pdf/Graphics.pdf"><img src="images/pdf.png" /></a>
+<ul>
+<li><a href="Heatmap-example.nb.html">Heatmap example</a></li>
+<li><a href="example-geo.nb.html">Geo-spatial example</a></li>
+</ul></li>
+<li><a href="Analysis.html">Analysis</a> <a href="pdf/Analysis.pdf"><img src="images/pdf.png" /></a></li>
+<li><a href="Wrapup.html">Wrapup</a> <a href="pdf/Wrapup.pdf"><img src="images/pdf.png" /></a></li>
 </ul>
 </div>
 <div id="data" class="section level2">
@@ -320,6 +326,7 @@ $(document).ready(function () {
 </li>
 <li><a href="https://github.com/halpo/R_Bootcamp_2020/raw/master/data/ebola-cases-and-deaths-who-gar-sitrep.xlsx">Data</a></li>
 <li><a href="https://github.com/halpo/R_Bootcamp_2020/tree/master/reading_ebola_data.R">Script</a></li>
+<li>With world bank data – <a href="https://github.com/halpo/R_Bootcamp_2020/raw/master/data/our.data.RData">download</a></li>
 </ul></li>
 <li>Bordeaux Wine Data
 <ul>
@@ -345,7 +352,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-19 14:52:38</em></p>
+<p>Last Updated: <em>2020-08-20 08:59:08</em></p>
 </div>
 
 
