--- a/syllabus.html
+++ b/syllabus.html
@@ -391,7 +391,7 @@ $(document).ready(function () {
 <li>Base Graphics</li>
 <li>Grammar Based, <code>ggplot2</code></li>
 </ul></li>
-<li>Analyses &amp; Hypothesis Testing
+<li><a href="Analysis.html">Analyses &amp; Hypothesis Testing</a>
 <ul>
 <li>T-test, Chi-squared, &amp; Fisher</li>
 <li>Linear Regression
@@ -415,7 +415,7 @@ $(document).ready(function () {
 <ul>
 <li>Day 1: Introduction to R and Rstudio</li>
 <li>Day 2: Data and data structures</li>
-<li>Day 3: Data Vizualization</li>
+<li>Day 3: Data Visualization</li>
 <li>Day 4: Regression and Analyses</li>
 <li>Day 5: Round-up and special topics.</li>
 </ul>
