--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ $(document).ready(function () {
 <li><a href="Graphics.html">Graphics</a> <a href="pdf/Graphics.pdf"><img src="images/pdf.png" /></a>
 <ul>
 <li><a href="Heatmap-example.nb.html">Heatmap example</a></li>
-<li><a href="example-geo.nb.html">Geo-spatial example</a></li>
+<li><a href="example-geo.html">Geo-spatial example</a></li>
 </ul></li>
 <li><a href="Analysis.html">Analysis</a> <a href="pdf/Analysis.pdf"><img src="images/pdf.png" /></a></li>
 <li><a href="Wrapup.html">Wrapup</a> <a href="pdf/Wrapup.pdf"><img src="images/pdf.png" /></a></li>
@@ -352,7 +352,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-20 08:59:08</em></p>
+<p>Last Updated: <em>2020-08-20 10:01:38</em></p>
 </div>
 
 
