--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ $(document).ready(function () {
 <ul>
 <li><a href="Heatmap-example.nb.html">Heatmap example</a></li>
 <li><a href="example-geo.html">Geo-spatial example</a></li>
+<li><a href="Florida-map-example.R">Florida county map example</a></li>
 </ul></li>
 <li><a href="Analysis.html">Analysis</a> <a href="pdf/Analysis.pdf"><img src="images/pdf.png" /></a></li>
 <li><a href="Wrapup.html">Wrapup</a> <a href="pdf/Wrapup.pdf"><img src="images/pdf.png" /></a></li>
@@ -342,6 +343,10 @@ $(document).ready(function () {
 <li><a href="https://youtu.be/ODPWOfPHVsk">Day 1 - Full</a></li>
 <li><a href="https://youtu.be/D0geSa7Y1kc">Day 2 - Full</a></li>
 <li><a href="https://youtu.be/Hv7Fdl9bqGI">Day 3 - Full</a></li>
+<li>Day 4 - Full
+<ul>
+<li>Bonus - Florida County Data Example</li>
+</ul></li>
 </ul>
 </div>
 <div id="section" class="section level1 footer">
@@ -352,7 +357,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-20 10:01:38</em></p>
+<p>Last Updated: <em>2020-08-20 12:14:49</em></p>
 </div>
 
 
