--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@ $(document).ready(function () {
 <ul>
 <li><a href="https://youtu.be/sia-a8s0lAk">Bonus - Florida County Data Example</a></li>
 </ul></li>
+<li>Day 5 - Full</li>
 </ul>
 </div>
 <div id="section" class="section level1 footer">
@@ -542,7 +543,7 @@ $(document).ready(function () {
     font-size: smaller
 }
 </style>
-<p>Last Updated: <em>2020-08-20 13:58:23</em></p>
+<p>Last Updated: <em>2020-08-21 08:48:40</em></p>
 </div>
 
 
